# verifydoc

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT.md  README.md  SECURITY.md  docker-compose.yml  firebase.json  mkdocs.yml  pyproject.toml  server.json
.github/: FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge.yml  ci.yml  claude-review.yml  codeql.yml  docker.yml  docs.yml  labeler.yml  pr-review-free.yml  release.yml  stale.yml
benchmark/: __init__.py  card.md
benchmark/datasets/: __init__.py  cord.py  docile.py  funsd.py  sroie.py  synthetic.py  xfund.py
benchmark/labeling/: guide.md
configs/: cord-apivlm.yaml  cord-paddleocr.yaml  cord-rapidocr.yaml  cord.yaml  demo.yaml  funsd-paddleocr.yaml  funsd-rapidocr.yaml  funsd.yaml  xfund-apivlm.yaml  xfund-rapidocr.yaml
docs/: AUTOMATION.md  DEPLOY.md  HUGGINGFACE.md  INTEGRATIONS.md  MCP.md  QUICKSTART_INTEGRATIONS.md  REAL_MODELS.md  RELATED_WORK.md  USP.md  how-it-works.md  index.md
examples/: README.md  batch_processing.py  invoice.txt  invoice_schema.json  llamaindex_example.py  pydantic_ai_example.py
examples/agents/: README.md  agent_review_loop.py  auto_repair.py  ensemble_adjudication.py  langgraph_review.py
examples/mcp/: README.md
public/: .gitkeep
scripts/: annotator_agreement.py  apivlm_perfield.py  apivlm_perfield_rich.py  backfill_entailment.py  build_hf_static.py  ensemble_experiment.py  grounded_conformal_real.py  grouped_conformal_experiment.py  leaderboard.py  make_demo_gif.py  phase2_method.py  run_benchmark.py  tables_to_latex.py
spaces/huggingface/: README.md  app.py  core.py  requirements.txt
spaces/huggingface-static/: README.md  index.html
tests/: test_agents.py  test_ambiguity_penalty.py  test_calibration.py  test_calibrators.py  test_characterization.py  test_cli.py  test_confidence.py  test_cord_loader.py  test_docile_loader.py  test_ensemble.py  test_entailment.py  test_export.py  test_extraction.py  test_funsd_loader.py  test_grounding.py  test_grouped_conformal.py  test_harness.py  test_harness_extractors.py  test_hf_space.py  test_hf_vlm.py  test_integrations.py  test_labeling.py  test_langgraph_example.py  test_leaderboard.py  test_learned_combiner.py  test_mcp_server.py  test_observability.py  test_pipeline.py  test_schema_infer.py  test_selective.py  test_server.py  test_sroie_loader.py  test_stats.py  test_types.py  test_xfund_loader.py
ui/: streamlit_app.py
verifydoc/: __init__.py  cli.py  export.py  labeling.py  mcp_server.py  observability.py  pipeline.py  types.py
verifydoc/adapters/: __init__.py  _ocr_common.py  api_vlm.py  base.py  canned.py  docling.py  dots_ocr.py  hf_vlm.py  mock.py  paddleocr_vl.py  rapidocr.py  text_search.py
verifydoc/agents/: __init__.py  ensemble.py  repair.py  schema_infer.py
verifydoc/calibration/: __init__.py  base.py  characterization.py  conformal.py  grouped_conformal.py  histogram.py  isotonic.py  platt.py  splits.py  temperature.py
verifydoc/confidence/: __init__.py  combined.py  consensus.py  entailment.py  grounding_based.py  learned.py  token_prob.py  verbalized.py
(+23 files in other folders)
