[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifydoc"
version = "0.9.0"
description = "A trust layer for document -> structured-JSON extraction: calibrated per-field confidence, source grounding, and abstention on top of any extractor."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Bhaskar Gurram" }]
keywords = [
    "document-extraction",
    "ocr",
    "calibration",
    "selective-prediction",
    "confidence",
    "hallucination",
    "abstention",
    "grounding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "typer>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.10", "pypdfium2>=4.24", "pillow>=10.0"]
ui = ["streamlit>=1.30", "pillow>=10.0"]
data = ["datasets>=2.16"]
ocr = ["rapidocr>=1.3", "onnxruntime>=1.17"]
api = ["anthropic>=0.39", "openai>=1.40"]
mcp = ["mcp>=1.2"]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.1",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
verifydoc = "verifydoc.cli:app"
verifydoc-mcp = "verifydoc.mcp_server:main"
verifydoc-server = "verifydoc.server.app:main"
verifydoc-bot = "verifydoc.server.poll:main"

[project.urls]
Homepage = "https://github.com/bhaskargurram-ai/verifydoc"
Repository = "https://github.com/bhaskargurram-ai/verifydoc"
Documentation = "https://github.com/bhaskargurram-ai/verifydoc/tree/main/docs"
Changelog = "https://github.com/bhaskargurram-ai/verifydoc/blob/main/CHANGELOG.md"
Issues = "https://github.com/bhaskargurram-ai/verifydoc/issues"

[tool.hatch.build.targets.wheel]
packages = ["verifydoc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B905", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"verifydoc/cli.py" = ["B008"]  # typer's standard Option/Argument-in-default idiom

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
# 3.12 target so PEP-695 `type` statements in newer numpy stubs parse;
# 3.11 runtime compatibility is enforced by the 3.11 CI test leg.
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["verifydoc"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
